Fix: Alteração na criação do token

--- a/PlusGest.API/appsettings.json
+++ b/PlusGest.API/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "Jwt": {
-    "Key": "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3"
+    "Key": "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3",
+    "iss": "api-plusgest-gateway",
+    "aud": ["api-plusgest-simulador"]
   },
   "AllowedHosts": "*"
 }
