Fix: Alteração correta ao criar o token e adicionar os microserviços para autenticar.

--- a/PlusGest.API/appsettings.json
+++ b/PlusGest.API/appsettings.json
@@ -6,9 +6,7 @@
     }
   },
   "Jwt": {
-    "Key": "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3",
-    "iss": "api-plusgest-gateway",
-    "aud": ["api-plusgest-simulador"]
+    "Key": "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3"
   },
   "AllowedHosts": "*"
 }
